src/objects/Mbr_Ldr_App_Permissions__c.object
<CustomObject>
    <fields>
        <fullName>BU_Count__c</fullName>
        <label>BU Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Percent__c</fullName>
        <formula>if (isblank( BU_Count__c ), 0, BU_Count__c /  Team_Account__r.BU_Count__c )</formula>
        <label>BU Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>if (isblank(Team_Account__r.Coordinator__c), &quot;Vacant&quot;,
 Team_Account__r.Coordinator__r.FirstName &amp; &quot; &quot; &amp;  Team_Account__r.Coordinator__r.LastName 
)</formula>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>text(Team_Account__r.Account_Group__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mbr_Ldr_Name__c</fullName>
        <formula>Mbr_Ldr__r.FirstName &amp; &quot; &quot; &amp; Mbr_Ldr__r.LastName</formula>
        <label>Mbr Ldr Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mbr_Ldr_Tier__c</fullName>
        <formula>if (Mbr_Ldr__r.Account.Name = &quot;SEIU-UHW&quot;, &quot;Staff&quot;, 
text(Mbr_Ldr__r.Mbr_Ldr_App_Tier__c))</formula>
        <label>Mbr Ldr Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mbr_Ldr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mbr Ldr</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mbr_Ldr_App_Permissions</relationshipLabel>
        <relationshipName>Mbr_Ldr_App_Permissions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <formula>if(isblank( Team_Account__r.Organizer_1__c ),
&quot;Vacant&quot;,
Team_Account__r.Organizer_1__r.FirstName &amp; &quot; &quot; &amp; Team_Account__r.Organizer_1__r.LastName
)</formula>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <formula>if (isblank(Team_Account__r.Regional_Director__c), &quot;Vacant&quot;,
 Team_Account__r.Regional_Director__r.FirstName &amp; &quot; &quot; &amp;  Team_Account__r.Regional_Director__r.LastName 
)</formula>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Count__c</fullName>
        <label>Target Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Percent__c</fullName>
        <formula>if (isblank( Target_Count__c ), 0, Target_Count__c /  Team_Account__r.BU_Count__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mbr_Ldr_App_Permissions</relationshipLabel>
        <relationshipName>Mbr_Ldr_App_Permissions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Employer_Name__c</fullName>
        <formula>Team_Account__r.Name</formula>
        <label>Team Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Mbr_Name__c</fullName>
        <formula>Team_Mbr__r.FirstName &amp; &quot; &quot; &amp; Team_Mbr__r.LastName</formula>
        <label>Team Mbr Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Mbr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Mbr</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mbr_Ldr_App_Permissions (Team Mbr)</relationshipLabel>
        <relationshipName>Mbr_Ldr_App_Permissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Worksite__c</fullName>
        <label>Worksite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mbr Ldr App Permissions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mbr_Ldr_Name__c</columns>
        <columns>Mbr_Ldr_Tier__c</columns>
        <columns>Team_Employer_Name__c</columns>
        <columns>Team_Mbr_Name__c</columns>
        <columns>Worksite__c</columns>
        <columns>Department__c</columns>
        <columns>Shift__c</columns>
        <columns>BU_Count__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Roger</fullName>
        <columns>NAME</columns>
        <columns>Mbr_Ldr_Name__c</columns>
        <columns>Mbr_Ldr_Tier__c</columns>
        <columns>Team_Employer_Name__c</columns>
        <columns>Team_Mbr_Name__c</columns>
        <columns>Worksite__c</columns>
        <columns>Department__c</columns>
        <columns>Shift__c</columns>
        <columns>BU_Count__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Employer_Name__c</field>
            <operation>contains</operation>
            <value>Roger</value>
        </filters>
        <label>Roger</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MPR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mbr Ldr App Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>